--- a/templates/editstation.html
+++ b/templates/editstation.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <!--suppress HtmlUnknownAttribute, HtmlUnknownTarget  -->
-{% if type == "perm" %}
+{% if type2 == "perm" %}
 <h2>{{ station.callsign }} {{ station.club_name }}</h2>
 {% else %}
 <h2>{{ station.callsign }} {{ station.club_name }}{% if station.event %} at {{station.event.name}}{% end %}</h2>
@@ -19,7 +19,8 @@
                 <div id="map" style="width: 100%; height: 20em;"></div>
             </div>
 
-            <p class="mt-3 mx-3">To change the location of your station, drag the marker to a new location on the map.</p>
+            <p class="mt-3 mx-3">To change the location of your station, drag the marker to a new location on the
+                map.</p>
         </div>
     </div>
 
@@ -52,154 +53,191 @@
                         </div>
                     </div>
 
-                    <!-- TODO from here -->
-
-                    {% if type == "temp" %}
+                    {% if type2 == "temp" %}
                     {% if station.event %}
                     <div class="row mb-2">
                         <div class="col-sm-4">
-                            Event:
+                            <label for="event" class="form-label mt-2">Event (optional):</label>
                         </div>
                         <div class="col-sm-8">
-                            {{ station.event.name }}
-                        </div>
-                    </div>
-                    {% end %}
-                    <div class="row mb-2">
-                        <div class="col-sm-4">
-                            Active:
-                        </div>
-                        <div class="col-sm-8">
-                            {{ station.humanized_start_end }}
-                        </div>
-                    </div>
-                    {% if station.rsgb_attending %}
-                    <div class="row mb-2">
-                        <div class="col-sm-4">
-                        </div>
-                        <div class="col-sm-8">
-                            RSGB attending
-                        </div>
-                    </div>
-                    {% end %}
-                    <div class="row mb-2">
-                        <div class="col-sm-4">
-                            Bands:
-                        </div>
-                        <div class="col-sm-8">
-                            {{ ", ".join([b.name for b in sorted(station.bands, key=lambda b: b.id)]) }}
-                        </div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col-sm-4">
-                            Modes:
-                        </div>
-                        <div class="col-sm-8">
-                            {{ ", ".join([m.name for m in sorted(station.modes, key=lambda m: m.id)]) }}
+                            <select name="event" id="event" class="form-control">
+                                <option value=""></option>
+                                {% for event in all_events %}
+                                <option value="{{ event.id }}" {% if station.event_id== event.id
+                                        %}selected{% end %}>{{ event.name }}
+                                </option>
+                                {% end %}
+                            </select>
                         </div>
                     </div>
                     {% end %}
 
-                    {% if type == "perm" %}
                     <div class="row mb-2">
                         <div class="col-sm-4">
-                            Meeting:
+                            <label for="start_time" class="form-label mt-2">Start time (UTC):</label>
                         </div>
                         <div class="col-sm-8">
-                            {{ station.meeting_when }}
-                            {% if station.meeting_when != "" and station.meeting_where != "" %}<br/>{% end %}
-                            {{ station.meeting_where }}
+                            <input id="start_time" class="form-control" name="start_time" type="datetime-local"
+                                   value="{{ station.start_time.strftime('%Y-%m-%dT%H:%M') }}"
+                                   required/>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-sm-4">
+                            <label for="end_time" class="form-label mt-2">Start time (UTC):</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <input id="end_time" class="form-control" name="end_time" type="datetime-local"
+                                   value="{{ station.end_time.strftime('%Y-%m-%dT%H:%M') }}"
+                                   required/>
+                        </div>
+                    </div>
+
+                    <div class="row mb-2">
+                        <div class="col-sm-4">
+                            <label class="form-label mt-2">Bands:</label>
+                        </div>
+                        <div class="col-sm-8">
+                            {% for band in all_bands %}
+                            <span style="display:inline-block; min-width:5em;">
+                    <input type="checkbox" id="band-{{ band.id }}" class="form-check-input" name="bands[]"
+                           value="{{ band.id }}"
+                           {% if band.id in [x.id for x in station.bands] %}checked{% end %}/>&nbsp;
+                    <label for="band-{{ band.id }}" class="form-check-label">{{ band.name }}</label>
+                    </span>
+                            {% end %}
+                            <input type="button" onClick="$(':input:checkbox[name=\'bands[]\']').prop('checked', true);"
+                                   value="All">
+                            <input type="button"
+                                   onClick="$(':input:checkbox[name=\'bands[]\']').prop('checked', false);"
+                                   value="None">
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-sm-4">
+                            <label class="form-label mt-2">Modes:</label>
+                        </div>
+                        <div class="col-sm-8">
+                            {% for mode in all_modes %}
+                            <span style="display:inline-block; min-width:5em;">
+                    <input type="checkbox" id="mode-{{ mode.id }}" class="form-check-input" name="modes[]"
+                           value="{{ mode.id }}"
+                           {% if mode.id in [x.id for x in station.modes] %}checked{% end %}/>&nbsp;
+                    <label for="mode-{{ mode.id }}" class="form-check-label">{{ mode.name }}</label>
+                    </span>
+                            {% end %}
                         </div>
                     </div>
                     {% end %}
 
-                    {% if station.notes and station.notes != "" %}
+                    {% if type2 == "perm" %}
                     <div class="row mb-2">
                         <div class="col-sm-4">
-                            Notes:
+                            <label for="type" class="form-label mt-2">Type:</label>
                         </div>
                         <div class="col-sm-8">
-                            {{ station.notes }}
+                            <select name="type" id="type" class="form-control">
+                                {% for type in all_perm_station_types %}
+                                <option value="{{ type.id }}" {% if station.type_id== type.id %}selected{% end %}>{{
+                                    type.name }}
+                                </option>
+                                {% end %}
+                            </select>
                         </div>
                     </div>
-                    {% end %}
-                    {% if station.website_url and station.website_url != "" %}
                     <div class="row mb-2">
                         <div class="col-sm-4">
-                            Website:
+                            <label for="meeting_when" class="form-label mt-2">Meeting times:</label>
                         </div>
                         <div class="col-sm-8">
-                            <a href="{{ station.website_url }}" target="_new">{{ station.website_url }}</a>
+                            <input type="text" id="meeting_when" class="form-control" name="meeting_when"
+                                   value="{{ station.meeting_when }}"/>
                         </div>
                     </div>
-                    {% end %}
-                    {% if station.qrz_url and station.qrz_url != "" %}
                     <div class="row mb-2">
                         <div class="col-sm-4">
-                            QRZ page:
+                            <label for="meeting_where" class="form-label mt-2">Meeting place:</label>
                         </div>
                         <div class="col-sm-8">
-                            <a href="{{ station.qrz_url }}" target="_new">{{ station.qrz_url }}</a>
-                        </div>
-                    </div>
-                    {% end %}
-                    {% if station.social_media_url and station.social_media_url != "" %}
-                    <div class="row mb-2">
-                        <div class="col-sm-4">
-                            Social media:
-                        </div>
-                        <div class="col-sm-8">
-                            <a href="{{ station.social_media_url }}" target="_new">{{ station.social_media_url }}</a>
-                        </div>
-                    </div>
-                    {% end %}
-                    {% if station.email and station.email != "" %}
-                    <div class="row mb-2">
-                        <div class="col-sm-4">
-                            Contact email:
-                        </div>
-                        <div class="col-sm-8">
-                            <a href="mailto:{{ station.email }}" target="_new">{{ station.email }}</a>
-                        </div>
-                    </div>
-                    {% end %}
-                    {% if station.phone_number and station.phone_number != "" %}
-                    <div class="row mb-2">
-                        <div class="col-sm-4">
-                            Contact number:
-                        </div>
-                        <div class="col-sm-8">
-                            {{ station.phone_number }}
+                            <input type="text" id="meeting_where" class="form-control" name="meeting_where"
+                                   value="{{ station.meeting_where }}"/>
                         </div>
                     </div>
                     {% end %}
 
-                    <input type="submit" class="btn btn-primary" name="action" value="Update"
-                           style="margin-top: -0.25em;">
-                    <input type="submit" class="btn btn-danger" name="action" value="Delete"
-                           style="margin-top: -0.25em;">
+                    <div class="row mb-2">
+                        <div class="col-sm-4">
+                            <label for="notes" class="form-label mt-2">Notes (optional):</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <textarea id="notes" class="form-control" name="notes"
+                                      rows="5">{{ station.notes }}</textarea>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-sm-4">
+                            <label for="website_url" class="form-label mt-2">Website (optional):</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="text" id="website_url" class="form-control" name="website_url"
+                                   value="{{ station.website_url }}"/>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-sm-4">
+                            <label for="qrz_url" class="form-label mt-2">QRZ Page (optional):</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="text" id="qrz_url" class="form-control" name="qrz_url"
+                                   value="{{ station.qrz_url }}"/>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-sm-4">
+                            <label for="social_media_url" class="form-label mt-2">Social media (optional):</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="text" id="social_media_url" class="form-control" name="social_media_url"
+                                   value="{{ station.social_media_url }}"/>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-sm-4">
+                            <label for="email" class="form-label mt-2">Email address (optional):</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="text" id="email" class="form-control" name="email"
+                                   value="{{ station.email }}"/>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-sm-4">
+                            <label for="phone_number" class="form-label mt-2">Phone (optional):</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="text" id="phone_number" class="form-control" name="phone_number"
+                                   value="{{ station.phone_number }}"/>
+                        </div>
+                    </div>
+                    <div class="row mb-2 mt-4">
+                        <div class="col-sm-4">
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="submit" class="btn btn-primary" name="action" value="Update"
+                                   style="margin-top: -0.25em;">
+                            <input type="submit" class="btn btn-danger" name="action" value="Delete"
+                                   style="margin-top: -0.25em;">
+                        </div>
+                    </div>
+
+                    <!-- lat/long fields updated by dragging the map marker; user_edit_password provided by GET param -->
+                    <input type="hidden" id="latitude_degrees" class="form-control" name="latitude_degrees"
+                           value="{{ station.latitude_degrees }}" required/>
+                    <input type="hidden" id="longitude_degrees" class="form-control" name="longitude_degrees"
+                           value="{{ station.longitude_degrees }}" required/>
+                    <input type="hidden" id="user_edit_password" class="form-control" name="user_edit_password"
+                           value="{{ user_edit_password }}" required/>
                 </form>
-            </div>
-        </div>
-
-        <p class="d-inline-flex gap-1 mt-4 mx-3">
-            <a data-bs-toggle="collapse" href="#editDetailsPanel" role="button"
-               class="link-underline link-underline-opacity-0"
-               aria-expanded="false" aria-controls="editDetailsPanel">
-                Is this your station?
-            </a>
-        </p>
-        <div class="collapse" id="editDetailsPanel">
-            <div class="card card-body">
-                <p>You can edit a station you previously created by entering the "edit password" you were given when
-                    the event was created. Please enter this below to edit or delete this station.</p>
-                <form method="post" class="mb-3">
-                    <!--suppress HtmlFormInputWithoutLabel -->
-                    <input type="password" id="edit_password" class="form-control" name="edit_password"
-                           style="max-width: 12em; display:inline-block;" required/>
-                </form>
-                <p class="mb-0">If you have lost this password, please contact an administrator for assistance.
-                    (TODO)</p>
             </div>
         </div>
     </div>
@@ -208,14 +246,13 @@
 <script type="importmap">
     {
       "imports": {
-        "leaflet": "https://unpkg.com/leaflet@2.0.0-alpha.1/dist/leaflet.js",
-        "leaflet-extra-markers": "https://unpkg.com/leaflet-extra-markers@2.0.1/src/index.js",
-        "luxon": "https://cdn.jsdelivr.net/npm/luxon@3.7.2/+esm"
+        "leaflet": "https://unpkg.com/leaflet@2.0.0-alpha.1/dist/leaflet.js"
       }
     }
 </script>
 <script>
-    let station = {% raw json_encode(station_json) %};
+    let latitude_degrees = {{ float(station.latitude_degrees) }};
+    let longitude_degrees = {{ float(station.longitude_degrees) }};
 </script>
-<script type="module" src="/js/map-individual.js?v=1"></script>
+<script type="module" src="/js/map-editstation.js?v=1"></script>
 {% end %}
