--- a/templates/adminstations.html
+++ b/templates/adminstations.html
@@ -2,11 +2,13 @@
 {% block content %}
 
 <!--suppress HtmlUnknownTarget -->
+<h2 class="mb-5">Manage Stations</h2>
+
 <div class="row">
     <div class="col-sm-6">
         <div class="card mx-auto bg-body-tertiary">
             <div class="card-header">
-                <h5 class="mb-0">Manage Temporary/Special Event Stations</h5>
+                <h5 class="mb-0">Temporary/Event Stations</h5>
             </div>
 
             <div class="card-body">
@@ -48,7 +50,7 @@
     <div class="col-sm-6">
         <div class="card mx-auto bg-body-tertiary">
             <div class="card-header">
-                <h5 class="mb-0">Manage Permanent/Club Stations</h5>
+                <h5 class="mb-0">Permanent/Club Stations</h5>
             </div>
 
             <div class="card-body">
