--- a/templates/adminusers.html
+++ b/templates/adminusers.html
@@ -2,9 +2,11 @@
 {% block content %}
 
 <!--suppress HtmlUnknownTarget -->
+<h2 class="mb-5">Manage Users</h2>
+
 <div class="card mx-auto bg-body-tertiary" style="max-width: 24rem;">
     <div class="card-header">
-        <h5 class="mb-0">Manage Users</h5>
+        <h5 class="mb-0">Users</h5>
     </div>
     <div class="card-body">
         <p class="card-text">Click on a user to update or delete it.</p>
