--- a/templates/adminevent.html
+++ b/templates/adminevent.html
@@ -2,17 +2,17 @@
 {% block content %}
 
 <!--suppress HtmlUnknownAttribute, HtmlUnknownTarget  -->
+{% if creating_new %}
+<h2 class="mb-5">New Event</h2>
+{% else %}
+<h2 class="mb-5">{{ event.name }}</h2>
+{% end %}
+
 <div class="card mx-auto bg-body-tertiary" style="max-width: 40rem;">
     <div class="card-header">
-        <h5 class="mb-0 card-title">{{ "Create" if creating_new else "Update" }} Event</h5>
+        <h5 class="mb-0 card-title">{{ "Set" if creating_new else "Edit" }} Details</h5>
     </div>
     <div class="card-body">
-        {% if creating_new %}
-        <p>Please enter the details for the new event.</p>
-        {% else %}
-        <p>Updating details for {{ event.name }}.</p>
-        {% end %}
-
         <form method="post">
             <div class="row mb-2">
                 <div class="col-sm-4">
@@ -146,6 +146,7 @@
                     <input type="submit" class="btn btn-primary" name="action" value="Update">
                     <input type="submit" class="btn btn-danger" name="action" value="Delete">
                     {% end %}
+                    <a href="/admin/events" class="btn btn-outline-primary" role="button">Cancel</a>
                 </div>
             </div>
         </form>
