--- a/templates/editstation.html
+++ b/templates/editstation.html
@@ -3,13 +3,13 @@
 
 <!--suppress HtmlUnknownAttribute, HtmlUnknownTarget  -->
 {% if type2 == "perm" %}
-<h2>{{ station.callsign }} {{ station.club_name }}</h2>
+<h2 class="mb-5">{{ station.callsign }} {{ station.club_name }}</h2>
 {% else %}
-<h2>{{ station.callsign }} {{ station.club_name }}{% if station.event %} at {{station.event.name}}{% end %}</h2>
+<h2 class="mb-5">{{ station.callsign }} {{ station.club_name }}{% if station.event %} at {{station.event.name}}{% end %}</h2>
 {% end %}
 
-<div class="row mt-5">
-    <div class="col-sm-6">
+<div class="row">
+    <div class="col-sm-6 mb-3">
         <div class="card mx-auto bg-body-tertiary">
             <div class="card-header">
                 <h5 class="mb-0 card-title">Edit Location</h5>
@@ -223,10 +223,9 @@
                         <div class="col-sm-4">
                         </div>
                         <div class="col-sm-8">
-                            <input type="submit" class="btn btn-primary" name="action" value="Update"
-                                   style="margin-top: -0.25em;">
-                            <input type="submit" class="btn btn-danger" name="action" value="Delete"
-                                   style="margin-top: -0.25em;">
+                            <input type="submit" class="btn btn-primary" name="action" value="Update">
+                            <input type="submit" class="btn btn-danger" name="action" value="Delete">
+                            <a href="/view/station/{{ type2 }}/{{ station.id }}" class="btn btn-outline-primary" role="button">Cancel</a>
                         </div>
                     </div>
 
@@ -253,6 +252,7 @@
 <script>
     let latitude_degrees = {{ float(station.latitude_degrees) }};
     let longitude_degrees = {{ float(station.longitude_degrees) }};
+    let default_zoom = 12;
 </script>
 <script type="module" src="/js/map-editstation.js?v=1"></script>
 {% end %}
