--- a/templates/viewstation.html
+++ b/templates/viewstation.html
@@ -3,13 +3,13 @@
 
 <!--suppress HtmlUnknownAttribute, HtmlUnknownTarget  -->
 {% if type == "perm" %}
-<h2>{{ station.callsign }} {{ station.club_name }}</h2>
+<h2 class="mb-5">{{ station.callsign }} {{ station.club_name }}</h2>
 {% else %}
-<h2>{{ station.callsign }} {{ station.club_name }}{% if station.event %} at {{station.event.name}}{% end %}</h2>
+<h2 class="mb-5">{{ station.callsign }} {{ station.club_name }}{% if station.event %} at {{station.event.name}}{% end %}</h2>
 {% end %}
 
-<div class="row mt-5">
-    <div class="col-sm-6">
+<div class="row">
+    <div class="col-sm-6 mb-3">
         <div class="card mx-auto bg-body-tertiary">
             <div class="card-header">
                 <h5 class="mb-0 card-title">Location</h5>
